# my-font

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: Dashboard.tsx  Panel.tsx  Settings.tsx
my_font/: core.py  plugin.py
