[metadata]
name = my-font
version = 0.0.1
description = Minimal InvenTree plugin adding boxicons.ttf
author = Your Name
author_email = your.email@example.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mistrzu4/my-font

[options]
packages = find:
include_package_data = true
install_requires =
    django>=3.2

[options.package_data]
* = webfonts/*.ttf

[options.entry_points]
inventree.plugins =
    my-font = my_font.plugin:MyFontPlugin